# curv-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODO.md  conftest.py  pyproject.toml  pytest.ini  readme.md
.cursor/: worktrees.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml
docs/: git-aliases.md
scripts/: check-pypi-version.sh  chk-latest-version.py  chk-pypi-latest-ver.py  conftest.py  get-current-ci.sh  git-branch-add-commit-push.sh  last_commit_gh_run_id.sh  publish.sh  pytest.ini  touch_commit_stamp.py  touch_stamp_files.py  wait-github-publish-result.py  wait_ci.py  wait_ci.sh
scripts/publish-tools/src/: canonical_remote.py  cli_helpers.py  get-publish-deps.py
scripts/publish-tools/test/: test_canonical_remote.py
scripts/wait_ci_dev_tools/: capture_cli.py
scripts/wait_ci_lib/: __init__.py  gh_run.py  readme.md
scripts/wait_ci_lib/gh/: gh_api.py  gh_run.py
