# <repo-root>/pyproject.toml
[project]
name = "curv-python-workspace"
version = "0"
requires-python = ">=3.10"
dependencies = [
  "pytest>=7",
  "pytest-xdist>=3",
  "ruff>=0.6",
  "build>=1",
  "pre-commit>=3.7",
  "curv>=0",         # so CLI e2e tests resolve curv in the root dev env
  "curvpyutils>=0",  # so CLI e2e tests resolve curvpyutils in the root dev env
  "curvtools>=0",    # so CLI e2e tests resolve curvtools in the root dev env
  "click>=8.1.0",
  "jinja2>=3",
  "tomli>=2; python_version<'3.11'", # only needed for Python 3.10
  "python-dotenv>=1.1.0",
  "rich",
  "tomli-w",  # For writing TOML files (tomli/tomllib are read-only)
  "shtab",
  "importlib-metadata>=6.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

# Make sure local 'curv', 'curvpyutils', and 'curvtools' are used during dev/CI
[tool.uv.sources]
curv = { workspace = true }
curvpyutils = { workspace = true }
curvtools = { workspace = true }