# <repo-root>/pyproject.toml
[project]
name = "curv-python-workspace"
version = "0"
requires-python = ">=3.10"
dependencies = [
  "pytest>=7",
  "pytest-xdist>=3",
  "ruff>=0.6",
  "build>=1",
  "pre-commit>=3.7",
  "hatchling>=1.24",
  "hatch-vcs>=0.4",
  "rich>=13",   # used by scripts/chk-pypi-latest-ver.py
]

[tool.uv.workspace]
members = ["packages/*"]

# Make sure local 'curv' is used by 'curvtools' during dev/CI
# Make sure local 'curvpyutils' is used by 'curvtools' during dev/CI
[tool.uv.sources]
curv = { workspace = true }
curvpyutils = { workspace = true }
